fix image overlapping when hovering

--- a/src/styles/blocks/explore-online.scss
+++ b/src/styles/blocks/explore-online.scss
@@ -70,7 +70,7 @@
     display: block;
     margin: 0 auto;
 
-    @include default-transition-on-state(scale, hover, 1.3);
+    @include default-transition-on-state(scale, hover, 1.05);
   }
 
   &__sub-title {
