--- a/src/styles/blocks/now-on-view.scss
+++ b/src/styles/blocks/now-on-view.scss
@@ -38,8 +38,8 @@
 
   &__image {
     display: block;
-    
-    @include default-transition-on-state(scale, hover, 1.3);
+
+    @include default-transition-on-state(scale, hover, 1.05);
   }
 
   &__picure--hidden {
